2025-01-14_t-mobile_fluxcd/gitops-example/simple02/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
  namespace: simple02
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
