2025-01-14_t-mobile_fluxcd/gitops-example/simple02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple
  namespace: simple02
spec:
  selector:
    app: simple
  ports:
    - port: 80
