2025-01-14_t-mobile_fluxcd/gitops-example/simple02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple
  namespace: simple02
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - simple-black.k8s.sikademo.com
      secretName: simple-black.k8s.sikademo.com-tls
  rules:
    - host: simple-black.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple
                port:
                  number: 80
